adding function to handle the time to live of cached values, if the time to live is over the value will be removed and if it is not over the updatedAt value will be updated to increase the time to live of this cached data

--- a/config/.env.template
+++ b/config/.env.template
@@ -1,3 +1,5 @@
 # PORT=3000
 # MONGODB_URL=mongodb://IP:PORT/dbname
 # CACHE_ENTRIES_LIMIT=100
+# Time to live is a value in milliseconds
+# TIME_TO_LIVE=5000
